--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,6 +14,12 @@ const swHref = href("/sw.js");
     <title>ACG Radar</title>
     <meta name="description" content="一个每小时自动更新的 ACG 资讯聚合小站（中日双语 UI）。" />
     <meta name="theme-color" content="#f2f4f8" />
+    <link
+      rel="search"
+      type="application/opensearchdescription+xml"
+      title="ACG Radar"
+      href={href("/opensearch.xml")}
+    />
     <link rel="manifest" href={href("/manifest.webmanifest")} />
     <link rel="icon" type="image/svg+xml" href={href("/favicon.svg")} />
   </head>
