--- a/src/components/SourceBadge.astro
+++ b/src/components/SourceBadge.astro
@@ -1,5 +1,7 @@
 ---
-import MoleculeSourceBadge from "./molecules/SourceBadge.astro";
+import MoleculeSourceBadge, { type Props } from "./molecules/SourceBadge.astro";
+
+const props = Astro.props as Props;
 ---
 
-<MoleculeSourceBadge {...Astro.props as any} />
+<MoleculeSourceBadge {...props} />
