--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -25,8 +25,8 @@ const repo = "https://github.com/TUR1412/ACG";
     <main class="mx-auto max-w-3xl px-4 py-12">
       <div class="glass relative overflow-hidden rounded-2xl p-8">
         <div class="pointer-events-none absolute inset-0">
-          <div class="absolute -left-28 -top-28 h-80 w-80 rounded-full bg-violet-500/10 blur-3xl"></div>
-          <div class="absolute -right-28 -bottom-28 h-80 w-80 rounded-full bg-sky-500/10 blur-3xl"></div>
+          <div class="acg-orb acg-orb-a absolute -left-28 -top-28 h-80 w-80 rounded-full blur-3xl"></div>
+          <div class="acg-orb acg-orb-b absolute -right-28 -bottom-28 h-80 w-80 rounded-full blur-3xl"></div>
         </div>
 
         <div class="relative flex items-center gap-3">
