--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -72,8 +72,8 @@ const spotlight = (() => {
   <section class="acg-layout-grid grid gap-grid md:grid-cols-12">
     <div class="glass relative overflow-hidden rounded-2xl p-6 md:col-span-8">
       <div class="pointer-events-none absolute inset-0">
-        <div class="absolute -left-24 -top-24 h-72 w-72 rounded-full bg-violet-500/10 blur-3xl"></div>
-        <div class="absolute -right-24 -bottom-24 h-72 w-72 rounded-full bg-sky-500/10 blur-3xl"></div>
+        <div class="acg-orb acg-orb-a absolute -left-24 -top-24 h-72 w-72 rounded-full blur-3xl"></div>
+        <div class="acg-orb acg-orb-b absolute -right-24 -bottom-24 h-72 w-72 rounded-full blur-3xl"></div>
       </div>
 
       <div class="relative flex flex-wrap items-end justify-between gap-4">
