--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -1,5 +1,7 @@
 ---
-import OrganismPostCard from "./organisms/PostCard.astro";
+import OrganismPostCard, { type Props } from "./organisms/PostCard.astro";
+
+const props = Astro.props as Props;
 ---
 
-<OrganismPostCard {...Astro.props as any} />
+<OrganismPostCard {...props} />
