--- a/src/components/PreferencesDrawer.astro
+++ b/src/components/PreferencesDrawer.astro
@@ -1,5 +1,7 @@
 ---
-import OrganismPreferencesDrawer from "./organisms/PreferencesDrawer.astro";
+import OrganismPreferencesDrawer, { type Props } from "./organisms/PreferencesDrawer.astro";
+
+const props = Astro.props as Props;
 ---
 
-<OrganismPreferencesDrawer {...Astro.props as any} />
+<OrganismPreferencesDrawer {...props} />
